# ixsi

./: Cargo.toml  README.md
src/: behavior.rs  config.rs  db.rs  filter.rs  handler.rs  lib.rs  prelude.rs  tastes.rs
tests/: wasm.rs
