[package]
name = "ixsi"
version = "0.0.1"
edition = "2021"
authors = ["Dimitri Timoz <dimitri.timoz@protonmail.com"]
description = "IXSI is a p2p protocol for recommendation systems."
license = "MIT"
repository = "https://github.com/DimitriTimoz/ixsi"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
