[package]
name = "ixsi"
version = "0.0.1"
edition = "2021"
authors = ["Dimitri Timoz <dimitri.timoz@protonmail.com"]
description = "IXSI is a p2p protocol for recommendation systems."
license = "MIT"
repository = "https://github.com/DimitriTimoz/ixsi"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.87"
libp2p = { version = "0.52" }
libp2p-webtransport-websys = { version = "0.1" }
tokio = { version = "1.29", features = ["sync"]}
async-trait = "0.1.72"

[dev-dependencies]
wasm-bindgen-test = "0.3"
